--- a/jenshin.css
+++ b/jenshin.css
@@ -1,19 +1,23 @@
 h1{
     font-size: 24px;
     color: #F9FAF8;
+    background-color: #1F2937;
 }
 h2{
     color:#F9FAF8;
     font-weight: bold;
     font-size: 48px;
+    background-color: #1F2937;
 }
 .sec-text{
     font-size: 18px;
     color: #E5E7EB;
+    background-color: #1F2937;
 }
 .HL{
     font-size: 18px;
     color: #E5E7EB;
+    background-color: #1F2937;
 }
 h3{
     font-size: 36px;
@@ -23,17 +27,27 @@ h3{
 .main-img{
     height: auto;
     width: 1000px;
+    background-color: #1F2937;
 }
 button{
     background-color: #3882F6;
+    color: #F9FAF8;
 }
-p{
+.quote{
     font-size: 36px;
     font-weight: italic;
     color: #1F2937;
+    background-color: #E5E7EB;
+}
+.author{
+    background-color: #E5E7EB;
 }
 img{
     height: auto;
     width: 400px;
     display: flex;
+}
+.call{
+    background-color: #3882F6;
+    color: #F9FAF8;
 }
