--- a/jenshin.css
+++ b/jenshin.css
@@ -18,20 +18,28 @@ h2{
     font-size: 18px;
     color: #E5E7EB;
     background-color: #1F2937;
+    position:relative;
+    left: 700px;
+    
 }
 h3{
     font-size: 36px;
     font-weight: extra-bold;
     color: #1F2937;
+    align-self: center;
 }
 .main-img{
     height: auto;
-    width: 1000px;
-    background-color: #1F2937;
+    width: 800px;
+    position: relative;
+    left: 100px;
+    top: 100px;
+    border-radius: 5px;
 }
 button{
     background-color: #3882F6;
     color: #F9FAF8;
+    border-radius: 5px;
 }
 .quote{
     font-size: 36px;
@@ -41,35 +49,103 @@ button{
 }
 .author{
     background-color: #E5E7EB;
+    align-self: end;
 }
-img{
+.im{
     height: auto;
     width: 400px;
     display: flex;
+    border-radius:10px;
+    border: 5px solid #3882F6;
 }
 .call{
     background-color: #3882F6;
     color: #F9FAF8;
 }
-.flex-container{
-    display: flexbox;
-}
 .box0{
+    display: flex;
+    flex-direction: column;
     background-color: #1F2937;
+    height: 750px;
+    padding-left: 300px;
 }
 .box1{
-    flex-direction: column;
-    justify-content: center;
+    justify-content: 
+    display: flex;
+
 }
 .box2{
-
+    display; flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .box3{
-
+    display: flex;
+    justify-content: end;
+    flex-direction: column;
+    height: 400px;
+    width: auto;
+    padding-bottom: 200px;
+    
 }
 .box4{
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width:auto;
+    align-items: center;
+    justify-content: center;
+    padding-left: 400px;
+    padding-right: 400px;
 }
 .box5{
     background-color: #3882F6; 
+    display: flex;
+    height: 75px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    justify-content: space-around;
 }
+.box6{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box7{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box8{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box9{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.headerbox{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 500px;
+    position: relative;
+    top: 150px;
+}
+.box10{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-basis: auto;
+}
+
+
